--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       <div class="small">
         <strong>Address:</strong><br>1750 Peters Ranch Rd<br>Danville, CA 94526<br>
         <strong>Email:</strong> <a href="mailto:contact@templeofunity.site">contact@templeofunity.site</a><br>
-        <strong>Phone:</strong> <a href="tel:+10000000000">+1 (000) 000-0000</a>
+        <strong>Phone:</strong> <a href="tel:+19715044327">+19715044327</a>
       </div>
     </div>
   </div>
