--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <p>For partnerships, volunteering, or assistance inquiries, please reach out.</p>
       <p><strong>Address:</strong><br><span class="upper-strong">TEMPLE OF UNITY</span><br>1750 Peters Ranch Rd, Danville, CA 94526</p>
       <p><strong>Email:</strong> <a href="mailto:contact@templeofunity.site">contact@templeofunity.site</a></p>
-      <p><strong>Phone:</strong> <a href="tel:+10000000000">+1 (000) 000-0000</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+19715044327">+19715044327</a></p>
     </div>
     <form class="form card" onsubmit="event.preventDefault(); alert('Form endpoint not configured. Replace with your service.');">
       <div class="card-body">
@@ -64,7 +64,7 @@
       <div class="small">
         <strong>Address:</strong><br>1750 Peters Ranch Rd<br>Danville, CA 94526<br>
         <strong>Email:</strong> <a href="mailto:contact@templeofunity.site">contact@templeofunity.site</a><br>
-        <strong>Phone:</strong> <a href="tel:+10000000000">+1 (000) 000-0000</a>
+        <strong>Phone:</strong> <a href="tel:+19715044327">+19715044327</a>
       </div>
     </div>
   </div>
